--- a/src/components/my-widgets-collaborate-dialog.scss
+++ b/src/components/my-widgets-collaborate-dialog.scss
@@ -204,7 +204,7 @@
 				margin-left: 125px;
 
 				.arrow {
-					background: url(/img/pink-arrow-left.png) no-repeat 0 center;
+					background: url(/static/img/pink-arrow-left.png) no-repeat 0 center;
 					width: 13px;
 					//height: 23px;
 					display: inline-block;
