--- a/src/components/include.scss
+++ b/src/components/include.scss
@@ -88,7 +88,7 @@ header {
 	height: 49px;
 
 	&.logged_in {
-		background: #fff url(/img/header_border_alt.png) 0% 100% repeat-x;
+		background: #fff url(/static/img/header_border_alt.png) 0% 100% repeat-x;
 	}
 
 	ul,
@@ -110,7 +110,7 @@ header {
 			height: 0;
 			padding: 60px 0 0 10px;
 			margin: 10px 0 0 10px;
-			background: url(/img/retina/materia_tmp_logo@2x.png) 0% 0% no-repeat;
+			background: url(/static/img/retina/materia_tmp_logo@2x.png) 0% 0% no-repeat;
 			background-size: 160px 68px;
 		}
 	}
@@ -370,7 +370,7 @@ header {
 		width: 45px;
 		height: 31px;
 		border: none;
-		background:url(../../../img/envelope.svg) 0% 0% no-repeat;
+		background:url(/static/img/envelope.svg) 0% 0% no-repeat;
 		padding: 0;
 		box-sizing: border-box;
 		&:hover {
@@ -698,14 +698,14 @@ h1.logo {
 		height: 0;
 		padding: 60px 0 0 10px;
 		margin: 10px 0 0 10px;
-		background: url(/img/materia_tmp_logo.png) 0% 0% no-repeat;
+		background: url(/static/img/materia_tmp_logo.png) 0% 0% no-repeat;
 	}
 }
 
 @media only screen and (min-device-pixel-ratio: 2),
 	only screen and (-webkit-min-device-pixel-ratio: 2) {
 	h1.logo a {
-		background: url(/img/retina/materia_tmp_logo@2x.png) 0% 0% no-repeat;
+		background: url(/static/img/retina/materia_tmp_logo@2x.png) 0% 0% no-repeat;
 		background-size: 160px 68px;
 	}
 
