--- a/src/components/my-widgets-page.scss
+++ b/src/components/my-widgets-page.scss
@@ -22,7 +22,7 @@
 
 			&.unchosen {
 				&:not(.bearded) {
-					background: #fff url('/img/kogneato_mywidgets.svg') 50% 30%/250px auto no-repeat;
+					background: #fff url('/static/img/kogneato_mywidgets.svg') 50% 30%/250px auto no-repeat;
 				}
 				min-height: 850px;
 			}
@@ -439,7 +439,7 @@
 					}
 
 					span.pencil {
-						background: url(/img/pencil.svg) no-repeat center bottom;
+						background: url(/static/img/pencil.svg) no-repeat center bottom;
 						margin: 0;
 						width: 21px;
 						height: 21px;
@@ -702,7 +702,7 @@
 			// padding-left: 100px;
 			position: relative;
 			box-sizing: border-box;
-			// background: #fff url(/img/widget_link_icon.png) no-repeat 20px
+			// background: #fff url(/static/img/widget_link_icon.png) no-repeat 20px
 			// 	20px;
 
 			.share-widget-options-first {
