--- a/src/components/my-widgets-scores.scss
+++ b/src/components/my-widgets-scores.scss
@@ -339,7 +339,7 @@
 					border: solid 1px #b0b0b0;
 					border-radius: 12px;
 					height: 19px;
-					background: #fff url('/img/magnifyingglass.png') 5px 50% no-repeat;
+					background: #fff url('/static/img/magnifyingglass.png') 5px 50% no-repeat;
 					padding-left: 23px;
 					padding-right: 10px;
 					outline: none;
