--- a/src/components/no-content-icon.scss
+++ b/src/components/no-content-icon.scss
@@ -13,13 +13,13 @@ div#no-score-content, div#not-scorable {
 	padding-top: 25px;
 	padding-left: 40%;
 	margin: 25px auto 0 auto;
-	
+
 	&#no-score-content {
-		background: #fff url('/img/kogneato_no_scores.svg') 10% 30%/250px auto no-repeat;
+		background: #fff url('/static/img/kogneato_no_scores.svg') 10% 30%/250px auto no-repeat;
 	}
 
 	&#not-scorable {
-		background: #fff url('/img/kogneato_with_a_broom.svg') 20% 20%/auto 240px no-repeat;
+		background: #fff url('/static/img/kogneato_with_a_broom.svg') 20% 20%/auto 240px no-repeat;
 	}
 
 	p {
