--- a/src/components/support-page.scss
+++ b/src/components/support-page.scss
@@ -410,7 +410,7 @@
 		margin-right: 5px;
 		margin-left: -2px;
 
-		background: url(/img/arrow.png) bottom no-repeat;
+		background: url(/static/img/arrow.png) bottom no-repeat;
 	}
 }
 
