--- a/src/css/partials/_homepage_spotlight.scss
+++ b/src/css/partials/_homepage_spotlight.scss
@@ -91,7 +91,7 @@ store_main section {
 
 .spotlight .main_container {
 	background: #fff;
- 	text-align: left;
+	text-align: left;
 }
 
 .spotlight .store_main p {
@@ -115,22 +115,22 @@ store_main section {
 	overflow: hidden;
 }
 .spotlight .store_main section.enigma {
-	background: url(/img/spotlight/enigma.png) right 10px no-repeat;
+	background: url(/static/img/spotlight/enigma.png) right 10px no-repeat;
 	padding-right: 490px;
 	width: 415px;
 }
 .spotlight .store_main section.crossword {
-	background: url(/img/spotlight/crossword.png) left 10px no-repeat;
+	background: url(/static/img/spotlight/crossword.png) left 10px no-repeat;
 	padding-left: 425px;
 	width: 507px;
 }
 .spotlight .store_main section.adventure {
-	background: url(/img/spotlight/adventure.png) right center no-repeat;
+	background: url(/static/img/spotlight/adventure.png) right center no-repeat;
 	padding-right: 350px;
 	width: 558px;
 }
 .spotlight .store_main section.html5 {
-	background: linear-gradient(to right, rgba(255,255,255, 0), rgba(255, 255, 255,1) 55%), url(/img/banner_final.png) no-repeat;
+	background: linear-gradient(to right, rgba(255,255,255, 0), rgba(255, 255, 255,1) 55%), url(/static/img/banner_final.png) no-repeat;
 	left: calc(50% - 50vw);
 	text-align: right;
 	background-size: contain;
