--- a/src/css/lti.scss
+++ b/src/css/lti.scss
@@ -472,7 +472,8 @@ html {
 		#lti-login-section {
 			margin: 0px auto;
 			width: 100%;
-			background: #fff;
+			//background: #fff;
+			background: #21232a;
 
 			header {
 				margin: 0;
