--- a/src/components/catalog.scss
+++ b/src/components/catalog.scss
@@ -88,6 +88,7 @@
 					svg {
 						height: 100%;
 						width: 100%;
+						fill: #c7c7c7;
 					}
 				}
 	
@@ -130,6 +131,7 @@
 					right: 0;
 					padding: 4px 35px 4px 35px;
 					font-size: 14px;
+					color: #fff;
 					background: #fff;
 					border: solid 1px #b0b0b0;
 					border-radius: 12px;
@@ -212,6 +214,7 @@
 				&.feature-button {
 					cursor: pointer;
 					background: #f2f2f2;
+					color: #fff;
 					border: 0;
 					margin: 3px 3px;
 					border-radius: 5px;
@@ -234,6 +237,7 @@
 						width: 16px;
 						height: auto;
 						margin-right: 6px;
+						fill: #fff;
 					}
 				}
 			}
@@ -369,6 +373,7 @@
 						svg {
 							position: relative;
 							top: 4px;
+							fill: #fff;
 						}
 					}
 				}
@@ -410,6 +415,7 @@
 								svg {
 									height: 20px;
 									width: auto;
+									fill: #fff;
 
 									&:last-of-type {
 										padding-left: 10px;
@@ -470,6 +476,531 @@
 								width: 12px;
 								height: auto;
 								margin-right: 6px;
+								fill: #fff;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
+	#hidden-count {
+		text-align: center;
+		margin: 10px 0 15px;
+		font-style: italic;
+	}
+}
+
+.darkMode .catalog {
+	.container {
+		margin: 25px auto;
+		position: relative;
+	}
+
+	section.page {
+		margin: 0 auto;
+		//background: #fff;
+		background: #21232a;
+		border-radius: 4px;
+		//border: #e4e4e4 1px solid;
+		border: #181920 1px solid;
+		//box-shadow: 1px 3px 10px #dcdcdc;
+		box-shadow: 1px 3px 10px #08090c;
+		width: 96%;
+		max-width: 1500px;
+		//overflow: hidden;
+	}
+
+	.mobile-only {
+		display: none; // shown on mobile
+	}
+
+	.top {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+
+		position: relative;
+		z-index: 2;
+
+		padding: 10px 15px;
+		//background: #eee;
+		background: #181920;
+		//color: #333;
+		color: #c7c7c7;
+
+		font-weight: bold;
+
+		h1 {
+			margin: 0;
+			display: inline-block;
+		}
+
+		aside {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			gap: 5px;
+
+			button.filter-toggle {
+				display: inline-block;
+				margin: 0 4px;
+				padding: 1px 0;
+
+				background: none;
+				border: 0;
+				//border-bottom: solid 1px #3690e6;
+				border-bottom: solid 1px #61a4e2;
+				//color: #3690e6;
+				color: #61a4e2;
+				font-size: 0.8em;
+				
+				cursor: pointer;
+				// text-decoration: underline;
+	
+				&.close-mode:after {
+					position: relative;
+					bottom: -1px;
+					content: 'X';
+					margin-left: 3px;
+
+					//color: #000;
+					color: #c7c7c7;
+					font-weight: bold;
+					border: 0;
+				}
+			}
+
+			.search {
+				position: relative;
+				width: 215px;
+				margin-left: 10px;
+				// max-width: 42%;
+	
+				.search-icon {
+					position: absolute;
+					top: 6px;
+					left: 9px;
+					height: 16px;
+					width: 20px;
+					// fill: #898686;
+					svg {
+						height: 100%;
+						width: 100%;
+						fill: #c7c7c7;
+					}
+				}
+	
+				.search-close {
+					cursor: pointer;
+					position: absolute;
+					border: none;
+					background: none;
+					width: 16px;
+					height: 16px;
+					top: 8px;
+					right: 15px;
+					opacity: 0.8;
+	
+					&:hover {
+						opacity: 1;
+					}
+	
+					&:before,
+					&:after {
+						position: absolute;
+						left: 8px;
+						top: 0;
+						content: ' ';
+						height: 14px;
+						width: 2px;
+						background-color: white;
+						transform: rotate(45deg);
+					}
+	
+					&:after {
+						transform: rotate(-45deg);
+					}
+				}
+	
+				input {
+					box-sizing: border-box;
+					border: none;
+					width: 100%;
+					right: 0;
+					padding: 4px 35px 4px 35px;
+					font-size: 14px;
+					color: #fff;
+					//background: #fff;
+					background: #21232a;
+					//border: solid 1px #b0b0b0;
+					border: solid 1px #13151a;
+					border-radius: 12px;
+					margin: 0;
+	
+					&::-ms-clear {
+						display: none;
+					}
+				}
+			}
+		}
+	}
+
+	.cancel_button {
+		display: inline-block;
+		background: none;
+		border: 0;
+		color: #3690e6;
+		margin: 0;
+		font-size: 0.9em;
+		cursor: pointer;
+	}
+
+	#filters-container {
+		z-index: 1;
+		display: flex;
+		justify-content: space-between;
+		flex-direction: column;
+		position: relative;
+		overflow: hidden;
+
+		&.ready {
+			max-height: 0;
+			transition: max-height 0.3s ease;
+
+			&.open {
+				max-height: 300px;
+			}
+
+			&.closed {
+				max-height: 0;
+			}
+		}
+
+		.filter-labels-container {
+			display: flex;
+			justify-content: center;
+			flex-wrap: wrap;
+			margin: 20px 10px 0px 10px;
+
+			&:before {
+				content: 'Features';
+				position: absolute;
+				left: 50%;
+				top: 5px;
+
+				font-size: 12px;
+				font-style: italic;
+				//color: #888;
+				color: #c7c7c7;
+			}
+
+			&.accessibility:before {
+				content: 'Accessibility';
+				position: absolute;
+				left: 50%;
+				top: 5px;
+
+				font-size: 12px;
+				font-style: italic;
+				//color: #888;
+				color: #c7c7c7;
+			}
+
+			button {
+				padding: 10px 12px;
+				font-size: 14px;
+				float: left;
+				background: white;
+				position: relative;
+
+				&.feature-button {
+					cursor: pointer;
+					//background: #f2f2f2;
+					background: #3c3e47;
+					color: #fff;
+					border: 0;
+					margin: 3px 3px;
+					border-radius: 5px;
+					padding: 8px 10px;
+
+					&:hover {
+						//background: #bfe5ff;
+						background: #405064;
+					}
+
+					&.selected {
+						//background: #3498db;
+						background: #295b99;
+						color: #fff;
+
+						svg {
+							fill: #fff;
+						}
+					}
+
+					svg {
+						width: 16px;
+						height: auto;
+						margin-right: 6px;
+						fill: #fff;
+					}
+				}
+			}
+		}
+	}
+
+	#no-widgets-message {
+		text-align: center;
+		margin: 40px;
+		font-style: italic;
+		color: #888888;
+	}
+
+	.widget-group {
+		//border: 1px dashed #c6c6c9;
+		border: 1px dashed #47484e;
+		margin: 31px 10px 0;
+		border-radius: 17px;
+
+		.container-label {
+			margin-top: -14px;
+			font-size: 1.3em;
+			//color: #888888;
+			color: #c7c7c7;;
+			text-align: center;
+			font-style: italic;
+			font-weight: bold;
+
+			span {
+				padding: 0 20px;
+				display: inline-block;
+				//background: white;
+				background: #21232a;
+			}
+		}
+	}
+
+	.widgets-container {
+		position: relative;
+		display: grid;
+		grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+
+		&:not(.featured) {
+			margin: 22px 10px;
+		}
+
+		.widget {
+			min-width: 300px;
+			min-height: 135px;
+			margin: 15px;
+			//background-color: #ffffff;
+			background-color: #2b2d35;
+			border-radius: 5px;
+			//border: #e4e4e4 1px solid;
+			border: #181920 1px solid;
+			//box-shadow: 1px 3px 10px #dcdcdc;
+			box-shadow: 1px 3px 10px #08090c;
+			opacity: 0;
+			position: relative;
+			transition: all 0.3s ease-in-out;
+
+			&:hover {
+				border: transparent 1px solid;
+				//background-color: #e2f3ff;
+				background-color: #2c3f57;
+				//box-shadow: 0px 0px 4px #dcdcdc; // 1px 3px 10px 2px #888;
+				box-shadow: 0px 0px 4px #08090c;
+			}
+
+			&.filtered {
+				opacity: 1;
+				transform: scale(1);
+
+				animation: grow 250ms ease;
+				@keyframes grow {
+					from {
+						opacity: 0;
+						transform: scale(0.1);
+					}
+					to {
+						opacity: 1;
+						transform: scale(1);
+					}
+				}
+			}
+
+			&:not(.filtered) {
+				opacity: 1;
+			}
+
+			.infocard {
+				//color: black;
+				color: #fff;
+				opacity: 1;
+				display: block;
+				height: 100%;
+				min-height: 135px;
+				text-decoration: none;
+
+				&:hover {
+					text-decoration: none;
+				}
+
+				&:focus {
+					background-color: #e2f3ff;
+				}
+
+				.header {
+					float: left;
+					// margin-top: -4px;
+					margin-bottom: 4px;
+					z-index: -10;
+					width: 100%;
+					box-sizing: border-box;
+					padding-left: 130px;
+					//background: #eee;
+					background: #181920;
+					border-radius: 5px 5px 0 0;
+
+					h1 {
+						display: block;
+						font-size: 18px;
+						font-weight: bold;
+						margin: 7px 5px 5px;
+						//color: #333;
+						color: #c7c7c7;
+
+						&.featured {
+							margin-right: 110px;
+						}
+					}
+
+					div.featured-label {
+						font-size: 14px;
+						font-weight: bold;
+						margin: 0;
+						padding: 6px 10px;
+						//background: #bfe5ff;
+						background: #295b99;
+						border-radius: 0 5px 0 0;
+						position: absolute;
+						// top: -3px;
+						right: 0;
+
+						svg {
+							position: relative;
+							top: 4px;
+							fill: #fff;
+						}
+					}
+				}
+
+				.img-holder {
+					position: absolute;
+					top: 0px;
+
+					img {
+						width: 115px;
+						height: 115px;
+						margin: 10px;
+					}
+				}
+
+				.widget-info {
+					margin-left: 135px;
+					margin-right: 8px;
+					font-size: 0.88em;
+
+					.accessibility-holder {
+						height: 25px;
+
+						.accessibility-indicators {
+							display: flex;
+							align-items: center;
+							justify-content: flex-end;
+							margin: 0 10px 5px 0;
+							position: absolute;
+							right: 0;
+							bottom: 0;
+
+							div {
+								position: relative;
+
+								&:hover span.tool-tip {
+									visibility: visible;
+								}
+								svg {
+									height: 20px;
+									width: auto;
+									fill: #fff;
+
+									&:last-of-type {
+										padding-left: 10px;
+									}
+								}
+
+								.tool-tip {
+									visibility: hidden;
+									position: absolute;
+									right: -50px;
+									bottom: 25px;
+									z-index: 99;
+									padding: 10px;
+									//box-shadow: 1px 2px 5px #888;
+									box-shadow: 1px 2px 5px #08090c;
+									line-height: 18px;
+									font-size: 14px;
+									border-radius: 10px;
+									width: 100px;
+									//background-color: #bfe5ff;
+									background-color: #2c3f57;
+									text-align: center;
+								}
+							}
+						}
+					}
+				}
+
+				ul {
+					padding: 0;
+					width: 100%;
+					line-height: 20px;
+					overflow-y: auto;
+					overflow-x: visible;
+					display: block;
+					margin-top: 5px;
+					margin-bottom: 5px;
+
+					li {
+						border-radius: 3px;
+						margin: 3px 10px 3px 0px;
+						padding: 1px 6px;
+						font-size: 10px;
+						//background: #eeeeee;
+						background: #4c4e58;
+						//color: #444;
+						color: #fff;
+						display: inline-block;
+						font-size: 12px;
+
+						&.selected {
+							//background: #3498db;
+							background: #295b99;
+							color: white;
+
+							&.accessibility-status svg {
+								fill: #fff;
+							}
+						}
+
+						&.accessibility-status {
+							svg {
+								width: 12px;
+								height: auto;
+								margin-right: 6px;
+								fill: #fff;
 							}
 						}
 					}
