--- a/src/components/detail.scss
+++ b/src/components/detail.scss
@@ -35,6 +35,33 @@ $color-green: #c5dd60;
 	}
 }
 
+.darkMode #breadcrumb-container {
+	display: inline-block;
+	position: relative;
+	top: 10px;
+	margin-left: 10px;
+	padding: 5px 10px;
+	background: #1d1f25;
+	border-radius: 3px;
+	font-size: 12px;
+	border: 1px solid #181920;
+
+	.breadcrumb {
+		display: inline-block;
+
+		a {
+			color: #91c8fc;
+		}
+	}
+
+	svg {
+		position: relative;
+		height: 15px;
+		top: 2px;
+		fill: #fff;
+	}
+}
+
 #widget-about {
 	display: none; // shown on mobile
 }
@@ -258,6 +285,382 @@ $color-green: #c5dd60;
 			position: relative;
 			border-radius: 2px;
 			background: $color-features;
+			color: #fff;
+			padding: 4px 12px;
+			margin-right: 5px;
+
+			font-weight: 700;
+			display: block;
+
+			&:hover {
+				background: $color-features-active;
+
+				&:after {
+					content: '';
+					position: absolute;
+					width: 0;
+					height: 0;
+					border-left: 6px solid transparent;
+					border-right: 6px solid transparent;
+					border-top: 6px solid $color-features-active;
+					right: 0;
+					left: 0;
+					bottom: -6px;
+					margin: auto;
+				}
+			}
+		}
+
+		.feature-description {
+			margin-top: 7px;
+			position: absolute;
+			z-index: 99;
+			padding: 15px;
+			color: #fff;
+			background: $color-features-active;
+			width: 250px;
+			border-radius: 15px;
+			box-shadow: 1px 2px 5px #888;
+			line-height: 18px;
+			font-size: 14px;
+		}
+
+		.feature-progress {
+			display: flex;
+			flex-direction: column;
+			position: relative;
+			margin: 1px;
+			float: left;
+			text-align: center;
+			align-items: center;
+			justify-content: center;
+			min-width: 110px;
+
+			&.unavailable {
+				color: #a2a2a2;
+			}
+
+			.accessibility-text {
+				font-size: 0.6em;
+				margin-top: -1.5em;
+				margin-bottom: 0.5em;
+				min-width: 50px;
+				border-bottom: 1px solid #000;
+
+				&.unavailable {
+					color: #a2a2a2;
+					border-bottom: 1px solid #a2a2a2;
+					content: 'Unavailable';
+				}
+			}
+
+			.accessibility-description {
+				&.unavailable {
+					color: #a2a2a2;
+				}
+			}
+
+			.bar-overflow {
+				position: relative;
+				width: 90px;
+				height: 45px;
+				overflow: hidden;
+
+				.bar {
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 90px;
+					height: 90px;
+					border-radius: 50%;
+					box-sizing: border-box;
+					border: 13px solid #fff;
+					transform: rotate(45deg);
+
+					&.full {
+						transform: rotate(225deg);
+						animation-name: full-circle;
+						animation-duration: 1s;
+						animation-timing-function: ease-out;
+						border-bottom-color: #45f556;
+						border-right-color: #45f556;
+					}
+
+					@keyframes full-circle {
+						0% {
+							transform: rotate(45deg);
+							border-bottom-color: #45f556;
+							border-right-color: #45f556;
+						}
+						100% {
+							transform: rotate(225deg);
+						}
+					}
+
+					&.limited {
+						transform: rotate(135deg);
+						animation-name: half-circle;
+						animation-duration: 1s;
+						animation-timing-function: ease-out;
+						border-bottom-color: #fafc65;
+						border-right-color: #fafc65;
+					}
+
+					@keyframes half-circle {
+						0% {
+							transform: rotate(45deg);
+							border-bottom-color: #fafc65;
+							border-right-color: #fafc65;
+						}
+						100% {
+							transform: rotate(135deg);
+						}
+					}
+
+					&.none {
+						transform: rotate(65deg);
+						animation-name: small-circle;
+						animation-duration: 1s;
+						animation-timing-function: ease-out;
+						border-bottom-color: #fa2819;
+						border-right-color: #fa2819;
+					}
+
+					@keyframes small-circle {
+						0% {
+							transform: rotate(45deg);
+							border-bottom-color: #fa2819;
+							border-right-color: #fa2819;
+						}
+						100% {
+							transform: rotate(65deg);
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+.darkMode .feature-list {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 12px;
+
+	&:last-of-type {
+		margin-bottom: 0;
+	}
+
+	&.accessibility-options {
+		.list-holder {
+			display: flex;
+			flex-direction: column;
+
+			ul {
+				list-style-type: none;
+				margin: 0;
+				padding: 0;
+
+				li {
+					&:first-of-type {
+						margin-bottom: 10px;
+					}
+
+					&.accessibility-indicator {
+						display: none;
+
+						&.show {
+							display: block;
+						}
+					}
+
+					&.accessibility-description {
+						display: none;
+						margin: 10px 0 0 0;
+
+						font-size: 14px;
+						font-weight: 300;
+						font-style: italic;
+						color: #5a5a5a;
+
+						&.show {
+							display: block;
+						}
+					}
+
+					.icon-spacer {
+						display: inline-block;
+						width: 35px;
+						margin-right: 10px;
+
+						svg {
+							position: relative;
+							height: 20px;
+							top: 4px;
+						}
+					}
+
+					span {
+						color: #fff;
+						font-size: 16px;
+					}
+				}
+			}
+		}
+	}
+
+	.feature-heading {
+		font-size: 14px;
+		// font-weight: 700;
+		margin-bottom: 6px;
+
+		&.guide {
+			font-size: 0.7em;
+		}
+	}
+
+	&.guides {
+		.feature:first-of-type {
+			margin-bottom: 10px;
+		}
+	}
+
+	.feature-footer {
+		font-size: 0.7em;
+	}
+
+	.item-list {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+	}
+
+	.item-list > * {
+		margin: 2px;
+	}
+
+	.progress-bar {
+		display: flex;
+		margin: 40px 0 30px 0;
+
+		.content-holder {
+			display: inherit;
+			position: absolute;
+
+			.bar {
+				height: 17px;
+				//width: 100px;
+				width: 80px;
+
+				&:not(:nth-child(3)) {
+					margin-right: 1px;
+				}
+
+				&.red {
+					background-color: #e75b00;
+				}
+
+				&.orange {
+					background-color: #e79300;
+				}
+
+				&.green {
+					background-color: #4bcd70;
+				}
+			}
+
+			.svg-arrow {
+				max-height: 35px;
+			}
+
+			.access-icon {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				position: absolute;
+				left: 0;
+				top: -30px;
+
+				&.score-limited {
+					left: 81px;
+				}
+
+				&.score-full {
+					left: 162px;
+				}
+
+				.icon-backing {
+					display: grid;
+					border-radius: 5px 5px 0 0;
+					background-color: #4b4b4b;
+					width: 80px;
+					height: 30px;
+				}
+
+				.icon-backing-single {
+					display: flex;
+					border-radius: 5px 5px 0 0;
+					background-color: #4b4b4b;
+					width: 80px;
+					height: 30px;
+
+					svg {
+						width: 100%;
+					}
+				}
+
+				.svg-icon {
+					max-width: 24px;
+					margin: auto;
+				}
+			}
+		}
+	}
+
+	.feature {
+		margin-top: 0;
+
+		.feature-description {
+			display: inline-block;
+			margin: 0 4px;
+			font-size: 12px;
+		}
+
+		.guide-link {
+			font-size: 13px;
+			padding: 2px 25px 2px 6px;
+			border-radius: 2px;
+			background: #555;
+			color: #fff;
+			font-weight: bold;
+			text-decoration: none;
+			margin-right: 5px;
+			position: relative;
+			display: inline-block;
+			line-height: normal;
+			cursor: pointer;
+
+			svg {
+				transform: scale(0.6);
+				position: absolute;
+				top: -2px;
+				right: 0px;
+			}
+
+			&:hover {
+				background-color: #000;
+				svg {
+					right: -2px;
+				}
+			}
+		}
+
+		.feature-name {
+			font-size: 14px;
+			cursor: default;
+			position: relative;
+			border-radius: 2px;
+			background: #295b99;
 			color: #fff;
 			padding: 4px 12px;
 			margin-right: 5px;
@@ -766,6 +1169,390 @@ a {
 
 			h4 {
 				color: #000;
+				font-size: 0.9em;
+				margin: 0px 0 6px 0;
+				padding: 10px 0 0 0;
+
+				&:first-child {
+					padding: 0;
+				}
+			}
+
+			p {
+				margin-top: 0;
+				padding: 0;
+			}
+		}
+
+		.bottom-content {
+			margin: 0 auto 5px auto;
+			border-radius: 5px;
+			display: flex;
+			padding: 20px;
+
+			.left-content {
+				display: flex;
+				flex-direction: column;
+				margin-right: auto;
+				max-width: 50%;
+			}
+
+			.right-content {
+				display: flex;
+				flex-direction: column;
+				//align-items: flex-end;
+			}
+		}
+
+		#createLink {
+			padding-left: 45px;
+
+			svg {
+				position: absolute;
+				fill: #535353;
+				top: 5px;
+				left: 17px;
+			}
+		}
+
+		#last-updated {
+			padding-left: 20px;
+			font-style: italic;
+			color: #b5b5b5;
+			font-size: 0.9em;
+		}
+	}
+
+	.loading-icon-holder {
+		margin: 3.5em 0;
+	}
+}
+
+.darkMode .widget_detail {
+	background: #21232a;
+	border-radius: 4px;
+	border: #181920 1px solid;
+	box-shadow: 1px 3px 10px #08090c;
+	margin: 25px 10px;
+	padding-bottom: 70px;
+	min-height: 500px;
+
+	.top {
+		background: #21232a;
+		border-radius: 4px 4px 0 0;
+		color: #fff;
+		padding: 15px 15px;
+		min-height: 92px;
+
+		img {
+			height: 92px;
+			position: absolute;
+		}
+
+		h1 {
+			margin: 0 0 0 110px;
+			font-size: 2em;
+		}
+
+		p {
+			margin: 0 0 0 110px;
+		}
+	}
+
+	.pics {
+		margin: 35px 60px 15px;
+		position: relative;
+		text-align: center;
+
+		button.pic-arrow {
+			position: absolute;
+			top: calc(50% - 20px);
+			display: block;
+			width: 24px;
+			height: 24px;
+			padding: 0;
+			cursor: pointer;
+			border: none;
+			outline: none;
+			fill: white;
+			background: black;
+			border-radius: 100%;
+			opacity: 0.5;
+
+			&:first-of-type {
+				left: -40px;
+			}
+
+			&:last-of-type {
+				right: -40px;
+			}
+
+			&:hover {
+				opacity: 0.7;
+			}
+
+			&:focus {
+				opacity: 1;
+			}
+		}
+
+		button.demo-dot {
+			margin: 0;
+			padding: 2px 8px 3px 18px;
+			position: relative;
+			background-color: #c0c0c0;
+			color: white;
+			border: none;
+			box-shadow: none;
+			border-radius: 6px;
+			cursor: pointer;
+			vertical-align: top;
+			top: 8px;
+
+			&:before {
+				content: ' ';
+				position: absolute;
+				top: 4px;
+				left: 6px;
+				width: 0;
+				height: 0;
+				border-top: 5px solid transparent;
+				border-bottom: 5px solid transparent;
+				border-left: 8px solid white;
+			}
+
+			&:hover,
+			&:focus {
+				background-color: #777;
+				outline: none;
+				color: white;
+			}
+
+			&.selected {
+				background-color: #555;
+				color: white;
+			}
+		}
+
+		button.pic-dot {
+			margin: 12px 10px;
+			padding: 0;
+			position: relative;
+			font-size: 0;
+			line-height: 0;
+			display: inline-block;
+			width: 10px;
+			height: 10px;
+			cursor: pointer;
+			color: transparent;
+			border: 0;
+			outline: none;
+			background: transparent;
+
+			&:before {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 10px;
+				height: 10px;
+				content: ' ';
+				border-radius: 100%;
+				background-color: white;
+				opacity: 0.25;
+			}
+
+			&:hover:before {
+				opacity: 0.5;
+			}
+
+			&:focus:before {
+				opacity: 0.5;
+			}
+
+			&.selected:before {
+				opacity: 1;
+			}
+		}
+	}
+
+	// pic scroller adapted from slick (github.com/kenwheeler/slick)
+	#pics-scroller-container {
+		overflow: hidden;
+		width: 100%;
+	}
+
+	#pics-scroller {
+		display: flex;
+		transform: translate3d(-2px, 0, 0);
+
+		> div {
+			width: 100%;
+			height: 100%;
+			min-height: 150px;
+			margin: auto 2px;
+			flex-grow: 0;
+			flex-shrink: 0;
+			padding: 5px;
+			background: #333;
+			box-sizing: border-box;
+			border-radius: 3px;
+			position: relative;
+			touch-action: none;
+			cursor: grab;
+
+			&.playing,
+			&.loading {
+				background: #b944cc;
+			}
+
+			&:active {
+				cursor: grabbing;
+			}
+
+			img {
+				width: 100%;
+				height: 100%;
+				margin: auto auto 37px;
+				flex-grow: 0;
+				flex-shrink: 0;
+				border-radius: 3px;
+			}
+
+			h3 {
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				text-align: right;
+				color: white;
+				margin: 0;
+				padding: 10px 30px;
+				font-size: 15px;
+				height: 20px;
+				user-select: none;
+			}
+		}
+	}
+
+	#demo-cover {
+		height: auto;
+		width: auto;
+		display: flex;
+		position: absolute;
+		margin: 5px 5px 45px;
+		border-radius: 3px;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		align-items: center;
+		justify-content: center;
+		text-align: center;
+		background-repeat: no-repeat;
+		background-size: contain;
+
+		&.hidden,
+		&.loading {
+			transform: translate3d(0, 0, 0); // safari fix for loading animation
+
+			button {
+				padding-right: 45px;
+
+				&:after {
+					content: '';
+					width: 20px;
+					height: 20px;
+					position: absolute;
+					top: -7px;
+					right: 10px;
+					background-color: #535353;
+					margin: 20px auto;
+					-webkit-animation: sk-rotatePlane 1.2s infinite ease-in-out;
+					animation: sk-rotatePlane 1.2s infinite ease-in-out;
+				}
+			}
+
+			#demo-cover-background {
+				opacity: 0.5;
+			}
+		}
+
+		button {
+			transition: 300ms;
+			font-weight: 700;
+			box-shadow: 1px 2px 4px #888;
+			text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
+			font-size: 22px;
+			border: 3px solid #525252;
+			padding: 10px 20px 10px 50px;
+			position: relative;
+			cursor: pointer;
+			z-index: 2;
+			opacity: 1;
+
+			&:hover {
+				text-decoration: underline;
+
+				+ #demo-cover-background {
+					opacity: 0.7;
+				}
+			}
+
+			svg {
+				fill: #535353;
+				transform: scale(1.5);
+				position: absolute;
+				top: 11px;
+				left: 18px;
+			}
+		}
+	}
+
+	#demo-cover-background {
+		background: radial-gradient(
+				ellipse farthest-corner at center center,
+				rgba(33, 35, 42, 0.85) 20%,
+				rgba(29, 31, 37, 0.97) 100%
+			)
+			repeat scroll 0% 0%;
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		top: 0;
+		left: 0;
+		transition: 1500ms;
+	}
+
+	#player-container {
+		position: relative;
+		z-index: 2;
+
+		section.widget {
+			top: 0px;
+			left: 0px;
+			right: 0px;
+			bottom: 0px;
+		}
+	}
+
+	// cover over images to make them draggable on iOS
+	.screenshot-drag-cover {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	}
+
+	.bottom {
+		padding: 0 55px;
+
+		.widget-action-buttons {
+			text-align: left;
+			margin-bottom: 20px;
+
+			h4 {
+				color: #fff;
 				font-size: 0.9em;
 				margin: 0px 0 6px 0;
 				padding: 10px 0 0 0;
