--- a/src/components/include.scss
+++ b/src/components/include.scss
@@ -14,6 +14,13 @@ $gray: #9a9a9a;
 $extremely-dark-gray: #333;
 
 $color-background-dark: #21232a;
+$color-header-dark: #1d1f25;
+$color-background-dark-gray: #4c4e58;
+$color-border-dark: #181920;
+$color-box-shadow-dark: #08090c;
+$color-text-light-gray: #d8d8d8;
+$color-features-dark: #295b99;
+$color-link-dark: #61a4e2;
 
 
 body,
@@ -27,6 +34,13 @@ body {
 	font-family: 'Lato', arial, sans-serif;
 	font-weight: 300;
 	overflow: auto;
+	color: #333;
+	background-color: #fff;
+}
+
+body.darkMode {
+	color: #fff;
+	background-color: $color-background-dark;
 }
 
 .action_button {
@@ -66,8 +80,58 @@ body {
 	}
 }
 
+.darkMode .action_button {
+	padding: 7px 23px 8px 23px;
+	background-color: $color-yellow;
+	transition: all 0.4s ease-in-out;
+	font-weight: 700;
+	color: $extremely-dark-gray;
+	font-size: 18px;
+	position: relative;
+	cursor: pointer;
+	display: inline-block;
+	user-select: none;
+
+	border: none;
+	border-radius: 4px;
+
+	&.green {
+		background: #c4dd61;
+		color: #525252;
+
+		&:hover {
+			background: #d5ea7f;
+		}
+	}
+
+	&:hover {
+		background-color: #ffc904;
+		color: #000;
+		box-shadow: 0px 1px 3px #08090c;
+		text-decoration: none;
+	}
+
+	.little-button-text {
+		font-size: 18px;
+		display: block;
+	}
+}
+
 a {
 	color: #0093e7;
+	text-decoration: none;
+
+	&:hover {
+		text-decoration: underline;
+	}
+
+	img {
+		border: none;
+	}
+}
+
+.darkMode a {
+	color: #61a4e2;
 	text-decoration: none;
 
 	&:hover {
@@ -114,6 +178,7 @@ header {
 			padding: 60px 0 0 10px;
 			margin: 10px 0 0 10px;
 			background: url(/img/retina/materia_tmp_logo@2x.png) 0% 0% no-repeat;
+			//background: url(/img/retina/materia_tmp_logo_dark.png) 0% 0% no-repeat;
 			background-size: 160px 68px;
 		}
 	}
@@ -265,7 +330,7 @@ header {
 	}
 
 	a {
-		color: #0093e7;
+		color: #0093e7; 
 		text-decoration: none;
 
 		&:hover {
@@ -345,6 +410,386 @@ header {
 		h2
 		{
 			color: rgba(0,0,0,0.3);
+			padding: 10px;
+			font-size: 1em;
+		}
+	}
+	.notice {
+		line-height: normal;
+		padding: 10px;
+		display: flex;
+		flex-direction: row;
+		// align-items: center;
+		gap: 10px;
+
+		&:hover{
+			background-color: rgb(250,250,250);
+		}
+
+		.senderAvatar {
+			width: 50px;
+			height: 50px;
+		}
+	}
+	.notice.deleted {
+		background-color:red !important
+	}
+	#notifications_link {
+		cursor:pointer;
+		width: 45px;
+		height: 31px;
+		border: none;
+		background:url(../../../img/envelope.svg) 0% 0% no-repeat;
+		padding: 0;
+		box-sizing: border-box;
+		&:hover {
+			box-shadow: 0px 0px 5px 0px grey;
+		}
+	}
+	#notifications_link.notEmpty:after {
+		content: attr(data-notifications);
+		border-radius: 50%;
+		border: 1px solid red;
+		color: white;
+		display: inline-block;
+		width: 15px;
+		height: 15px;
+		background-color: red;
+		position: absolute;
+		left: 35px;
+		bottom: -5px;
+		font-size: 0.9em;
+	}
+	.noticeClose
+	{
+		border: none;
+		padding: 2px;
+		width: 20px;
+		height: 20px;
+		flex-shrink: 0;
+
+		visibility: hidden;
+		&.show {
+			visibility: visible;
+		}
+
+		&:hover {
+			cursor: pointer;
+			filter: invert(0.5) sepia(1) saturate(80) hue-rotate(340deg);
+		}
+	}
+	.notice_right_side
+	{
+		display: flex;
+		flex-direction: column;
+		gap: 5px;
+
+		.subject {
+			line-height: 1.5em;
+
+			a {
+				font-weight: bold;
+				text-decoration: underline;
+			}
+		}
+	}
+	.grantAccessTitle
+	{
+		margin-top: 5px;
+		margin-bottom: 0px;
+		padding: 5px 0;
+		border-top: 1px solid gray;
+	}
+	.notif-date
+	{
+		font-size: 12px;
+		color: rgb(100, 100, 100);
+		padding-top: 5px;
+	}
+	.mobile-notifications
+	{
+		display: none;
+	}
+	#removeAllNotifications
+	{
+		color:#a2a2a2;
+		overflow: visible;
+		padding: 10px;
+		align-self: end;
+		&:hover {
+			color: red;
+		}
+	}
+}
+
+.darkMode header {
+	position: relative;
+	z-index: 1000;
+
+	padding: 35px 0 0 136px;
+	margin: 0 0 25px 0;
+	display: block;
+
+	height: 49px;
+
+	&.logged_in {
+		background: #21232a url(/img/header_border_alt.png) 0% 100% repeat-x;
+	}
+
+	ul,
+	p {
+		margin: 0;
+		padding: 0;
+	}
+
+	h1.logo {
+		position: absolute;
+		left: 0;
+		top: 0;
+		margin: 0;
+		overflow: hidden;
+
+		a {
+			display: block;
+			width: 100px;
+			height: 0;
+			padding: 60px 0 0 10px;
+			margin: 10px 0 0 10px;
+			//background: url(/img/retina/materia_tmp_logo@2x.png) 0% 0% no-repeat;
+			background: url(/img/retina/materia_tmp_logo_dark@2x.png) 0% 0% no-repeat;
+			background-size: 160px 68px;
+		}
+	}
+
+	&#loginLink {
+		top: auto;
+	}
+
+	.profile-bar
+	{
+		position: absolute;
+		top: 45px;
+		right: 30px;
+		display: flex;
+		flex-direction: row;
+		gap: 10px;
+		font-size: 14px;
+
+		.profile-bar-options
+		{
+			display:  flex;
+			flex-direction: column;
+			align-items: end;
+		}
+
+		img:not(.noticeClose) {
+			width: 35px;
+			height: 35px;
+			border-radius: 2px;
+
+			&:hover:not(.senderAvatar) {
+				cursor: pointer;
+			}
+		}
+
+		a {
+			font-size: 14px;
+			font-weight: 300;
+			//color: #4c4c4c;
+			color: $color-text-light-gray;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			line-height: 1.2em;
+			max-width: 150px;
+
+			&:hover {
+				text-decoration: underline;
+				cursor: pointer;
+			}
+		}
+	}
+
+	// Not being used but kept just in case
+	.profile-menu
+	{
+		visibility: hidden;
+		position: absolute;
+		top: 100px;
+		right: 28px;
+		text-align: right;
+		background-color: white;
+		box-shadow: 1px 10px 10px 1px rgba(0,0,0,0.1);
+		padding: 15px 15px 15px 25px;
+		border: 1px solid white;
+		border-radius: 5px;
+
+		ul {
+			display: flex;
+			flex-direction: column;
+			gap: 10px;
+
+			li {
+				display: inline;
+				max-width: 100px;
+
+				span {
+					font-size: 12px;
+				}
+
+				a {
+					font-size: 14px;
+					font-weight: 100;
+					margin: 0;
+					padding: 0;
+					//color: #4c4c4c;
+					color: $color-text-light-gray;
+					transition: all 0.2s linear;
+				}
+
+				a:hover {
+					border: none;
+					border-bottom: 2px solid #0093E7;
+					padding: 5px 0;
+					text-decoration: none;
+				}
+			}
+		}
+
+		&.show
+		{
+			visibility: visible;
+		}
+		.arrow-top {
+			border-left: 15px solid transparent;
+			border-right: 15px solid transparent;
+			border-bottom: 15px solid white;
+			position: absolute;
+			right: 5px;
+			top: -10px;
+		}
+	}
+
+	&.logged-in {
+		.user.avatar {
+			right: 20px;
+		}
+	}
+
+	&.logged-out {
+		.user.avatar {
+			right: 35px;
+		}
+	}
+
+	nav {
+		display: block;
+		margin-top: 16px;
+
+		ul {
+			li {
+				display: inline;
+				padding: 0 10px 0 0;
+
+				.logout a {
+					display: none;
+					position: absolute;
+					right: 20px;
+					bottom: 13px;
+					font-size: 14px;
+				}
+
+				a {
+					font-size: 14px;
+					font-weight: 300;
+					margin: 0;
+					padding: 0;
+				}
+			}
+		}
+	}
+
+	a {
+		/* color: #0093e7; */
+		text-decoration: none;
+
+		&:hover {
+			text-decoration: underline;
+		}
+
+		img {
+			border: none;
+		}
+	}
+
+	#mobile-menu-toggle {
+		display: none;
+	}
+
+	.elevated {
+		color: #ffa52b;
+	}
+
+	.nav_expandable {
+		color: #0093e7;
+		font-size: 17px;
+		font-weight: bold;
+		height: 27px;
+		position: relative;
+		margin-left: 20px;
+
+		ul {
+			display: none;
+			background-color: #ffffff;
+			//background-color: #000000;
+			padding: 0;
+			position: absolute;
+			bottom: -140%;
+			left: -10px;
+			border-left: 1px solid #d3d3d3;
+			border-right: 1px solid #d3d3d3;
+			border-bottom: 1px solid #d3d3d3;
+		}
+
+		&:hover > span {
+			display: inline-block;
+			height: 27px;
+
+			&.admin {
+				padding-right: 165px;
+			}
+
+			&.support {
+				padding-right: 75px;
+			}
+		}
+
+		&:hover > ul {
+			display: flex;
+
+			li {
+				padding: 0 10px 5px;
+				height: auto;
+			}
+		}
+	}
+
+	#notices {
+		position:absolute;
+		display: flex;
+		flex-direction: column;
+		right: 20px;
+		top: 45px;
+		width: 400px;
+		box-shadow: 1px 10px 10px 1px rgba(0,0,0,0.1);
+		background-color: $color-background-dark;
+		border-radius: 3px;
+		overflow: auto;
+		max-height: 500px;
+
+		h2
+		{
+			color: rgba(255,255,255,0.3);
 			padding: 10px;
 			font-size: 1em;
 		}
@@ -689,6 +1134,44 @@ nav {
 	}
 }
 
+.darkMode nav {
+	display: block;
+
+	ul {
+		li {
+			display: inline;
+			padding: 0 20px 0 0;
+
+			.logout a {
+				display: none;
+				position: absolute;
+				right: 20px;
+				bottom: 13px;
+				font-size: 14px;
+			}
+
+			a {
+				font-size: 14px;
+				font-weight: 100;
+				margin: 0;
+				padding: 0;
+				//color: #4c4c4c;
+				color: #d8d8d8;
+				transition: all 0.2s linear;
+			}
+
+			a:hover {
+				border: none;
+				border-bottom: 2px solid #0093E7;
+				padding: 5px 0;
+				//color: #000;
+				color: #fff;
+				text-decoration: none;
+			}
+		}
+	}
+}
+
 h1.logo {
 	position: absolute;
 	left: 0;
@@ -702,6 +1185,25 @@ h1.logo {
 		height: 0;
 		padding: 60px 0 0 10px;
 		margin: 10px 0 0 10px;
+		//background: url(/img/materia_tmp_logo_dark.png) 0% 0% no-repeat;
+		background: url(/img/materia_tmp_logo.png) 0% 0% no-repeat;
+	}
+}
+
+.darkMode h1.logo {
+	position: absolute;
+	left: 0;
+	top: 0;
+	margin: 0;
+	overflow: hidden;
+
+	a {
+		display: block;
+		width: 100px;
+		height: 0;
+		padding: 60px 0 0 10px;
+		margin: 10px 0 0 10px;
+		//background: url(/img/materia_tmp_logo_dark.png) 0% 0% no-repeat;
 		background: url(/img/materia_tmp_logo.png) 0% 0% no-repeat;
 	}
 }
@@ -710,12 +1212,22 @@ h1.logo {
 	only screen and (-webkit-min-device-pixel-ratio: 2) {
 	h1.logo a {
 		background: url(/img/retina/materia_tmp_logo@2x.png) 0% 0% no-repeat;
+		//background: url(/img/retina/materia_tmp_logo_dark.png) 0% 0% no-repeat;
 		background-size: 160px 68px;
 	}
 
 	header {
-		//background: #fff;
-		background: #000;
+		background: #fff;
+		background-size: 12px 6px;
+	}
+	.darkMode h1.logo a {
+		background: url(/img/retina/materia_tmp_logo@2x.png) 0% 0% no-repeat;
+		//background: url(/img/retina/materia_tmp_logo_dark.png) 0% 0% no-repeat;
+		background-size: 160px 68px;
+	}
+
+	.darkMode header {
+		background: #1d1f25;
 		background-size: 12px 6px;
 	}
 }
@@ -800,6 +1312,48 @@ h1.logo {
 	}
 }
 
+.darkMode .page, .widget {
+	position: relative;
+	z-index: 1;
+
+	.alert-wrapper {
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 9998;
+		width: 100%;
+		height: 100%;
+		background: rgba(0,0,0,0.66);
+
+		.alert-dialog {
+			position: absolute;
+			top: 25%;
+			left: 50%;
+			width: 400px;
+			margin-left: -200px;
+			text-align: center;
+			padding: 15px;
+			background: #21232a;
+
+			h3 {
+				margin: 5px 0;
+				font-size: 1.2em;
+			}
+
+			.buttons {
+				display: block;
+				width: 100%;
+				margin-top: 5px;
+
+				.action_button {
+					display: inline-block;
+					margin: 10px 0 5px 0;
+				}
+			}
+		}
+	}
+}
+
 section,
 header,
 nav,
@@ -818,6 +1372,18 @@ footer {
 .popup h2,
 .detail h2 {
 	color: #0a0a0a;
+	font-weight: 900;
+	font-size: 20pt;
+	margin: 10px auto;
+	padding: 0;
+	// text-shadow: 0px 1px 0px #ccc;
+}
+
+.darkMode
+.popup h2,
+.detail h2 {
+	//color: #0a0a0a;
+	color: #fff;
 	font-weight: 900;
 	font-size: 20pt;
 	margin: 10px auto;
