--- a/src/components/question-importer.scss
+++ b/src/components/question-importer.scss
@@ -95,3 +95,99 @@
 		}
 	}
 }
+
+.darkMode #question-importer {
+	background: #21232a;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	padding: 6px 10px 0;
+
+	.header {
+		background: #1d1f25;
+		display: flex;
+		justify-content: space-between;
+		padding: 6px 10px;
+
+		h1 {
+			font-size: 18px;
+			font-weight: 550;
+			text-shadow: 0 1px #08090c;
+			color: #fff;
+			margin: 0;
+			padding: 0;
+		}
+
+		label {
+			margin-right: 10px;
+		}
+
+		.showing-text {
+			align-self: flex-end;
+			color: #333;
+			font-size: 12px;
+		}
+	}
+
+	.table-container {
+		overflow-y: auto;
+		flex-grow: 1;
+
+		table {
+			border-collapse: collapse;
+			width: 100%;
+
+			th, td {
+				background: #21232a;
+				padding: 10px 18px;
+			}
+
+			thead tr th {
+				color: #fff;
+				cursor: pointer;
+				border-bottom: 1px solid #ddd;
+				position: sticky;
+				text-align: center;
+				top: 0;
+				z-index: 100;
+
+				.sort-asc,
+				.sort-desc {
+					display: inline-block;
+					border-left: 5px solid transparent;
+					border-right: 5px solid transparent;
+					margin-left: 5px;
+					height: 0;
+					width: 0;
+				}
+				.sort-asc {
+					border-bottom: 5px solid black;
+				}
+				.sort-desc {
+					border-top: 5px solid black;
+				}
+			}
+
+			.loading {
+				padding: 8px 10px;
+				text-align: center;
+			}
+		}
+	}
+
+	.actions {
+		align-items: center;
+		border-top: 1px solid #000;
+		display: flex;
+		justify-content: center;
+		padding: 20px;
+
+		#cancel-button {
+			color: #61a4e2;
+			cursor: pointer;
+			margin-right: 15px;
+			text-decoration: underline;
+		}
+	}
+}
