Add dark mode graphics

--- a/src/components/catalog.scss
+++ b/src/components/catalog.scss
@@ -727,7 +727,7 @@
 
 					&:hover {
 						//background: #bfe5ff;
-						background: #405064;
+						background: #1b304b;
 					}
 
 					&.selected {
@@ -849,7 +849,7 @@
 				}
 
 				&:focus {
-					background-color: #e2f3ff;
+					background-color: #295b99;
 				}
 
 				.header {
