--- a/src/components/guide-page.scss
+++ b/src/components/guide-page.scss
@@ -12,11 +12,11 @@
 
 .darkMode .page {
 	margin: 0 5%;
-	background: #21232a;
+	background: #fff;
 	padding: 10px;
 	border-radius: 10px;
 	box-shadow: 1px 3px 10px #08090c;
-	color: #fff;
+	color: #5e5e5e;
 
 	font-family: 'Lato', arial, sans-serif;
 }
