--- a/src/components/include.scss
+++ b/src/components/include.scss
@@ -20,6 +20,7 @@ $color-border-dark: #181920;
 $color-box-shadow-dark: #08090c;
 $color-text-light-gray: #d8d8d8;
 $color-features-dark: #295b99;
+$color-blue-hover-dark: #1b304b;
 $color-link-dark: #61a4e2;
 
 
@@ -1381,6 +1382,7 @@ footer {
 
 .darkMode
 .popup h2,
+.darkMode
 .detail h2 {
 	//color: #0a0a0a;
 	color: #fff;
