--- a/src/components/my-widgets-page.scss
+++ b/src/components/my-widgets-page.scss
@@ -1562,11 +1562,11 @@
 				font-weight: 400;
 				// text-decoration: underline;
 				margin-left: 98px;
-				color: #0093e7;
+				color: #61a4e2;
 				cursor: pointer;
 
 				&:hover {
-					color: #0093e7;
+					color: #61a4e2;
 				}
 
 				&.disabled {
