--- a/src/components/question-importer.scss
+++ b/src/components/question-importer.scss
@@ -18,7 +18,7 @@
 			font-size: 18px;
 			font-weight: 550;
 			text-shadow: 0 1px #fbfbfb;
-			color: #a6a6a6;
+			color: #666;
 			margin: 0;
 			padding: 0;
 		}
