--- a/src/components/homepage.scss
+++ b/src/components/homepage.scss
@@ -141,7 +141,7 @@
 				padding: 30px 0px 100px;
 				overflow: hidden;
 			
-				background: linear-gradient(to right, rgba(33, 35, 42, 0), rgba(33, 35, 42, 1) 55%), url(/img/banner_final.png) no-repeat;	
+				background: linear-gradient(to right, rgba(33, 35, 42, 0), rgba(33, 35, 42, 1) 55%), url(/img/banner_dark.png) no-repeat;	
 				background-size: contain;
 			
 				text-align: right;
