--- a/src/components/my-widgets-settings-dialog.scss
+++ b/src/components/my-widgets-settings-dialog.scss
@@ -415,7 +415,7 @@ $mobile-width: 620px;
 
 		.title {
 			font-size: 1.3em;
-			color: #555;
+			color: #d8d8d8;
 			font-weight: bold;
 		}
 
@@ -434,7 +434,7 @@ $mobile-width: 620px;
 		padding: 10px;
 		font-size: 0.9em;
 		width: 90%;
-		background: #eeeeee;
+		background: #1d1f25;
 		border-radius: 5px;
 	}
 
@@ -506,25 +506,25 @@ $mobile-width: 620px;
 					input[type='range']::-webkit-slider-runnable-track {
 						width: 100%;
 						height: 8.4px;
-						border: 1px solid #ccc;
+						border: 1px solid #181920;
 						//background: #f9f9f9;
-						background: #f9f9f9;
+						background: #d8d8d8;
 						border-radius: 4px;
 						padding-top: 1px;
 						padding-bottom: 1px;
 						height: 1px;
 					}
 					input[type='range']::-webkit-slider-thumb {
-						border: 1px solid #4380ad;
+						border: 1px solid #2469a8;
 						height: 18px;
 						width: 18px;
 						border-radius: 100%;
-						background: #519bd1;
+						background: #61a4e2;
 						-webkit-appearance: none;
 						margin-top: -9px;
 					}
 					input[type='range']:focus::-webkit-slider-runnable-track {
-						background: #367ebd;
+						background: #61a4e2;
 					}
 					input[type='range']::-moz-range-track {
 						width: 100%;
@@ -597,7 +597,7 @@ $mobile-width: 620px;
 					margin-bottom: 35px;
 					margin-top: -5px;
 					position: relative;
-					color: rgba(0, 0, 0, 0.3);
+					color: rgba(255, 255, 255, 0.6);
 
 					@media screen and (max-width: $mobile-width) {
 						display: none;
@@ -608,7 +608,7 @@ $mobile-width: 620px;
 
 						span {
 							cursor: default;
-							color: rgba(0, 0, 0, 1);
+							color: rgb(255, 255, 255);
 						}
 					}
 
@@ -618,14 +618,14 @@ $mobile-width: 620px;
 						cursor: pointer;
 
 						&:hover {
-							color: rgba(0, 0, 0, 1);
+							color: rgb(255, 255, 255);
 						}
 
 						&.active {
-							color: rgba(0, 0, 0, 1);
+							color: rgb(255, 255, 255);
 						}
 						&.disabled {
-							color: rgba(0,0,0,0.5);
+							color: rgba(255, 255, 255, 0.5);
 							cursor: default;
 						}
 					}
@@ -670,7 +670,7 @@ $mobile-width: 620px;
 					.input-desc {
 						padding: 10px;
 						margin-bottom: 0;
-						background-color: #f2f2f2;
+						background-color: #4c4e58;
 						border-radius: 5px;
 
 						font-weight: 400;
@@ -735,7 +735,7 @@ $mobile-width: 620px;
 					.input-desc {
 						padding: 10px;
 						margin-bottom: 0;
-						background: #f2f2f2;
+						background: #4c4e58;
 						border-radius: 5px;
 						margin-top: 0.5em;
 						margin-bottom: 1em;
@@ -867,6 +867,86 @@ $mobile-width: 620px;
 
 			&.selected {
 				background: #0094e2;
+				color: #ffffff;
+			}
+		}
+	}
+}
+
+.darkMode .from-picker {
+	margin-top: 20px;
+	display: flex;
+	align-items: baseline;
+
+	h3 {
+		margin: 0;
+		width: 5.1em;
+		min-width: 5.1em;
+		max-width: 5.1em;
+		margin-right: 30px;
+		text-align: start;
+		margin-bottom: 0.5em;
+	}
+
+	.date-picker {
+		list-style: none;
+		padding: 0;
+
+		.date-list-elem {
+			display: flex;
+			justify-content: start;
+			flex-wrap: nowrap;
+			align-items: center;
+		}
+
+		label {
+			margin-left: 5px;
+		}
+
+		input[type='radio'] {
+			margin: 0;
+		}
+
+		input[type='text'] {
+			margin: 0 5px;
+			background-color: #1d1f25;
+			color: #fff;
+			border: 1px solid rgba(255, 255, 255, 0.5);
+			padding: 7px;
+			font-size: 0.8em;
+			border-radius: 7px;
+
+			&.error {
+				background-color: rgba(255, 0, 0, 0.5);
+			}
+		}
+
+		.am {
+			border: 1px solid rgba(255, 255, 255, 0.6);
+			border-right: none;
+			border-radius: 4px 0 0 4px;
+		}
+
+		.pm {
+			border: 1px solid rgba(255, 255, 255, 0.6);
+			border-radius: 0 4px 4px 0;
+		}
+
+		.am,
+		.pm {
+			color: rgba(255, 255, 255, 0.6);
+			padding: 5px;
+			margin: 0;
+			text-transform: uppercase;
+			font-size: 0.8em;
+			font-weight: bold;
+			cursor: pointer;
+			-webkit-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+
+			&.selected {
+				background: #295b99;
 				color: #ffffff;
 			}
 		}
