--- a/src/components/profile-page.scss
+++ b/src/components/profile-page.scss
@@ -22,6 +22,7 @@
 	}
 
 	section.page, aside {
+		/* The background for the sidebar (containing the profile and settings navigation) is styled in the section below using a repeating image */
 		background: #fff;
 		border-radius: 4px;
 		border: #e4e4e4 1px solid;
@@ -451,7 +452,7 @@
 		padding: 0 0 0 20px;
 	}
 }
-.darkMode .user, .settings {
+.darkMode .user, .darkMode .settings {
 
 	@media (max-width: 800px) {
 		section.page {
@@ -461,9 +462,9 @@
 	}
 
 	section.page, aside {
-		background: #1d1f25;
+		background: #21232a;
 		border-radius: 4px;
-		border: #1d1f25 1px solid;
+		border: #181920 1px solid;
 		box-shadow: 1px 3px 10px #08090c;
 	}
 
@@ -474,8 +475,7 @@
 		z-index: 100;
 		width: 575px; /*625px*/
 		padding: 10px 60px 30px 145px;
-		background: url('/img/user_page_background.gif') 0 0 repeat-y;
-		background: #21232a;
+		background: #21232a url('/img/user_page_background_dark.gif') 0 0 repeat-y;
 		min-height: 400px;
 
 		.loading-icon-holder {
@@ -676,12 +676,12 @@
 
 			&.complete {
 				.score-link:hover {
-					background: #eee;
+					background: #1b304b;
 				}
 			}
 
 			&.incomplete .score {
-				background: #ccc;
+				background: #4c4e58;
 			}
 
 			&.perfect_score .score {
@@ -697,7 +697,7 @@
 				top: 10px;
 				width: 40px;
 
-				background: #0093e7;
+				background: #295b99;
 				color: #fff;
 				border-radius: 3px;
 				font-size: 28px;
@@ -718,7 +718,7 @@
 				top: 5px;
 				text-align: right;
 
-				color: #a4a4a4;
+				color: #d8d8d8;
 
 				font-size: 11px;
 				font-weight: 700;
@@ -728,7 +728,7 @@
 				display: block;
 				text-align: left;
 				font-family: 'LatoBlack', arial, serif;
-				color: #7b7b7b;
+				color: #d8d8d8;
 				font-size: 11px;
 				font-weight: 700;
 				text-transform: uppercase;
@@ -812,7 +812,7 @@
 				&.selected {
 					a {
 						margin-left: 0px;
-						background: #4c4e58;
+						background: #21232a;
 						border-right: 0;
 						border-left: 0;
 						color: #fff;
