--- a/src/components/profile-page.scss
+++ b/src/components/profile-page.scss
@@ -309,7 +309,7 @@
 				position: absolute;
 				top: 12px;
 				right: 1px;
-				color: #eee;
+				color: #7b7b7b;
 				font-size: 30px;
 			}
 		}
